<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vermell">

<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TableRow android:background="@color/blanc"
        android:padding="20px"
        android:layout_marginBottom="10px">

        <ImageView android:id="@+id/foto"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logobruixoappvermell"
            android:contentDescription="fotografia"/>

        <TextView
            android:text="@string/Què_faig_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quefaigsi"
            android:textAppearance="@color/colorPrimary"
            android:textColor="#acadaf"
            android:textSize="35dp"
            android:gravity="left"/>
    </TableRow>
    <TableRow
        android:padding="20px"
        android:background="@color/blanc"
        android:layout_marginBottom="5px">
        <ImageView android:id="@+id/foto1"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logobruixoappvermell"
            android:contentDescription="fotografia"/>

        <TextView
            android:text="@string/Em_vull_separar_o_divorciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Assesorament1"
            android:textAppearance="@color/colorPrimary"
            android:textColor="#8e8e8f"
            android:textSize="20dp"
            android:gravity="left"/>
    </TableRow>
    <TableRow
        android:padding="20px"
        android:layout_marginBottom="5px"
        android:background="@color/blanc">
        <ImageView android:id="@+id/foto2"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logobruixoappvermell"
            android:contentDescription="fotografia"/>

        <TextView
            android:text="@string/Vull_informacio_sobre_guardia_i_custodia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Assesorament2"
            android:textColor="#8e8e8f"
            android:textSize="20dp"
            android:gravity="left"/>
    </TableRow>
    <TableRow android:background="@color/blanc"
        android:layout_marginBottom="5px"
             android:padding="20px">
        <ImageView android:id="@+id/foto3"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logobruixoappvermell"
            android:contentDescription="fotografia"/>

        <TextView
            android:text="@string/He_vist_una_agressio_masclista_a_una_dona_o_un_infant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Assesorament3"
            android:textAppearance="@color/colorPrimary"
            android:textColor="#8e8e8f"
            android:textSize="20dp"
            android:gravity="left"/>
    </TableRow>
    <TableRow android:padding="20px"
        android:layout_marginBottom="5px"
        android:background="@color/blanc">
        <ImageView android:id="@+id/foto4"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logobruixoappvermell"
            android:contentDescription="fotografia"/>

        <TextView
            android:text="@string/Necessito_assessorament_sobre_anticonceptius_o_salut_sexual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Assesorament4"
            android:textAppearance="@color/colorPrimary"
            android:textColor="#8e8e8f"
            android:textSize="20dp"
            android:gravity="left"/>
    </TableRow>
    <TableRow android:padding="20px"
        android:layout_marginBottom="5px">

        <ImageView android:id="@+id/foto6"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logobruixoappblanc"
            android:contentDescription="fotografia"/>

        <TextView

            android:text="@string/A_on_puc_adreçarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onpucadresarme1"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:gravity="left"/>
        </TableRow>
    <!--TableRow-->
        <!--ImageView android:id="@+id/foto7"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentLeft="true"
            android:src="@drawable/logobruixoappblanc"
            android:visibility="invisible"
            android:contentDescription="fotografia"/-->
        <!--TextView

            android:text="adreçar-me?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onpucadresarme2"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:gravity="left"/-->
    <!--/TableRow-->


</TableLayout>

</ScrollView>